# PPL_Project-RemUp

./: .gitignore  README.md  README_eng.md  RemUp_test.html  project_struct.md  style.css  test.html
.github/: copilot-instructions.md
RemUp_compiler/: LICENSE  README.md  compile_remup.py  compile_rumup.py  debug_compiler.py  install.sh  pyproject.toml  quick_test.ru  requirements.txt  run.bat  run.py  setup.py  test.html  test.remup  ttt.html  ttt.remup  update.sh
RemUp_compiler/examples/: RemUp_Example.html  test.html  test.ru  ttt.html  vocabulary.html
RemUp_compiler/output/: None  RemStyle.css  test.html
RemUp_compiler/preview_output/: preview.html
RemUp_compiler/quick_test_output/static/css/: remup.css
RemUp_compiler/remup/: __init__.py  ast_nodes.py  cli.py  compiler.py  html_generator.py  lexer.py  live_preview.py  main.py  parser.py  template_engine.py  utils.py  websocket_preview.py
RemUp_compiler/remup.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
RemUp_compiler/remup_compiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
RemUp_compiler/static/css/: CompactStyle.css  DarkTheme.css  RemStyle.css
RemUp_compiler/templates/: academic.html  archive.html  base.html  footer.html  header.html  minimal.html
WHEN_I_LEARN/: RemStyle.css
vscode-remup-syntax/RemUp/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
vscode-remup-syntax/RemUp/syntaxes/: remup.tmLanguage.json
