[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "remup"
dynamic = ["version"]
authors = [
  {name = "Your Name", email = "your.email@example.com"},
]
description = "RemUp编译器 - 将.ru文件编译为HTML学习笔记"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["notes", "compiler", "learning", "markdown", "html"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # 依赖项列表
]

[project.scripts]
remup = "remup.main:main"

[project.urls]
"Homepage" = "https://github.com/MingShuo-S/PPL_Project-RemUp/tree/main"

[tool.setuptools.packages.find]
where = ["."]
include = ["remup*"]

[tool.setuptools.package-data]
remup = ["templates/*", "static/**/*"]